--- a/COTA.ipynb
+++ b/COTA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "COTA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPaH00DMG92pQhBUb0+WFSg",
+      "authorship_tag": "ABX9TyPuPiiZO+5bKFEOAMgXIXbX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2380,7 +2380,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 9. Provide a survival analysis of all Breast Cancer patients. Breast Cancer patients can be identified using ICD 10 codes. You can Google for ICD codes and find the ones that match Breast Cancer.\n"
+        "# 9. Provide a survival analysis of all Breast Cancer patients. Breast Cancer patients can be identified using ICD 10 codes. You can Google for ICD codes and find the ones that match Breast Cancer.\n",
+        "\n",
+        "## Packages Installed:\n",
+        "## Lifelines package was installed from lifelines KaplanMeierFitter function was used for the survival analysis of all the Breast cancer Patients.\n",
+        "## Parameters in the fit function of KaplanMeierFitter :\n",
+        "\n",
+        "##X = durations (an array, list, pd.DataFrame or pd.Series) – length n – duration subject was observed for\n",
+        "##Y = event_observed (an array, list, pd.DataFrame, or pd.Series, optional) – True if the the death was observed, False if the event was lost (right-censored). Defaults all True if event_observed==None\n",
+        "\n",
+        "## From the below graph we can see that the survival rate decreases with the increase in the number of months.\n"
       ],
       "metadata": {
         "id": "MtBDVc_o0MA2"
@@ -2389,7 +2398,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# data[data['vital_status']=='Alive']['vital_status']  \n",
         "data['Y_Kaplan Meier'] = data['vital_status'].apply(lambda x: 0 if x=='Alive' else 1)\n",
         "data['X_Kaplan Meier'] = data['days_to_death'].apply(lambda x:0 if x=='[Not Applicable]' or x=='[Discrepancy]' else float(x))\n",
         "data['X_Kaplan Meier'].fillna(value = 0,inplace = True)\n",
@@ -2400,7 +2408,7 @@
       "metadata": {
         "id": "ZBBU92PgeRAT"
       },
-      "execution_count": 40,
+      "execution_count": 51,
       "outputs": []
     },
     {
